--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,46 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# =============== DEPENDENCIAS ===============
+node_modules/
+.pnpm/
+.yarn/
+.pnp.*
+.pnpm-debug.log*
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# =============== NEXT.JS OUTPUT ===============
+.next/
+out/
+build/
 
-# testing
-/coverage
+# =============== ENVIRONMENT ===============
+.env
+.env.local
+.env.development.local
+.env.production.local
+.env.test.local
+.env.*.local
 
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
+# =============== SISTEMA & MISC ===============
 .DS_Store
 *.pem
+*.tsbuildinfo
+next-env.d.ts
 
-# debug
+# =============== LOGS ===============
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
-.env
+# =============== VERCE + DEPLOY ===============
+.vercel/
+.netlify/
+firebase-debug.log
 
-# vercel
-.vercel
+# =============== COVERAGE / TEST ===============
+coverage/
+jest.config.ts
+vitest.config.ts
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# =============== INTELLIJ / VSCODE / ETC ===============
+.idea/
+.vscode/
+*.swp
+*.swo
