--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.1"
+    "next": "15.4.1",
+    "@supabase/supabase-js": "^2",
+    "heroui": "^1"
   },
   "devDependencies": {
     "typescript": "^5",
