--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,40 @@
-# =============== DEPENDENCIAS ===============
-node_modules/
-.pnpm/
-.yarn/
-.pnp.*
-.pnpm-debug.log*
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# =============== NEXT.JS OUTPUT ===============
-.next/
-out/
-build/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# =============== ENVIRONMENT ===============
-.env
-.env.local
-.env.development.local
-.env.production.local
-.env.test.local
-.env.*.local
+# testing
+/coverage
 
-# =============== SISTEMA & MISC ===============
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
 .DS_Store
 *.pem
-*.tsbuildinfo
-next-env.d.ts
 
-# =============== LOGS ===============
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# =============== VERCE + DEPLOY ===============
-.vercel/
-.netlify/
-firebase-debug.log
+# local env files
+.env*.local
 
-# =============== COVERAGE / TEST ===============
-coverage/
-jest.config.ts
-vitest.config.ts
+# vercel
+.vercel
 
-# =============== INTELLIJ / VSCODE / ETC ===============
-.idea/
-.vscode/
-*.swp
-*.swo
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+pnpm-lock.yaml
+yarn.lock
+package-lock.json
+bun.lockb
