--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "2.1.1",
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
+    "lucide-react": "^0.525.0",
     "next": "^15.4.2",
     "next-themes": "0.4.6",
     "react": "18.3.1",
